maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:26: error: ';' expected but 'var' found.
}var etat=0;
 ^